logic switch on,off + logic switch off after 5 seconds

--- a/src/index.css
+++ b/src/index.css
@@ -302,3 +302,12 @@ body,
 .night .bulb-middle-3 {
   border-top: 30px solid #fe3;
 }
+
+
+.on {
+  background: yellow;
+}
+
+.off {
+  background: transparent;
+}
